Configuring wss url

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -53,7 +53,7 @@
     const roomId = JSON.parse(document.getElementById('room-id').textContent);
 
     const chatSocket = new WebSocket(
-        'wss://' + `${m_url} + '/ws/chat/` + roomId + '/'
+        'wss://' + m_url + '/ws/chat/' + roomId + '/'
     );
 
     // const chatSocket = new WebSocket(
